--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <title>ODSQuiz | Aprende sobre los ODS jugando</title>
   <link rel="manifest" href="manifest.json" />
-  <title>nombreProvisional | Aprende sobre los ODS jugando</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="icons/icon-192.png" />
 </head>
 <body>
+  <!-- Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">nombreProvisional</div>
+      <div class="logo">ODSQuiz</div>
       <ul class="nav-links">
         <li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre los ODS</a></li>
@@ -20,22 +22,41 @@
     </nav>
   </header>
 
+  <!-- Sección de presentación con imagen de fondo -->
   <main class="hero">
-    <div class="hero-content">
+    <div class="hero-overlay">
       <h1>Conoce los 17 Objetivos de Desarrollo Sostenible</h1>
-      <p>nombreProvisional es una plataforma educativa para aprender jugando sobre los desafíos globales que enfrenta nuestro planeta.</p>
+      <p>ODSQuiz es una plataforma educativa para aprender jugando sobre los desafíos globales que enfrenta nuestro planeta.</p>
       <a href="#" class="cta-button">Comenzar</a>
     </div>
   </main>
 
+  <!-- Footer -->
   <footer>
-  <div class="footer-container">
-    <p>&copy; 2025 <strong>nombreProvisional</strong> · Plataforma educativa sobre los Objetivos de Desarrollo Sostenible</p>
-    <p>Hecho con ❤️ para promover la conciencia ambiental y social.</p>
-    <p>
-      <a href="https://www.un.org/sustainabledevelopment/es/" target="_blank" rel="noopener noreferrer">
-        Conoce más sobre los 17 ODS
-      </a>
-    </p>
-  </div>
-</footer>
+    <div class="footer-container">
+      <p>&copy; 2025 <strong>ODSQuiz</strong> · Plataforma educativa sobre los Objetivos de Desarrollo Sostenible</p>
+      <p>Hecho con ❤️ para promover la conciencia ambiental y social.</p>
+      <p>
+        <a href="https://www.un.org/sustainabledevelopment/es/" target="_blank">
+          Conoce más sobre los 17 ODS
+        </a>
+      </p>
+    </div>
+  </footer>
+
+  <!-- Script principal -->
+  <script src="script.js"></script>
+
+  <!-- Registro del Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker
+          .register('service-worker.js')
+          .then(reg => console.log('Service Worker registrado:', reg.scope))
+          .catch(err => console.error('Error al registrar SW:', err));
+      });
+    }
+  </script>
+</body>
+</html>
