--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ODSQuiz | Aprende sobre los ODS jugando</title>
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="js/manifest.json" />
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="icons/icon-192.png" />
 </head>
@@ -45,7 +45,7 @@
   </footer>
 
   <!-- Script principal -->
-  <script src="script.js"></script>
+  <script src="js/script.js"></script>
 
   <!-- Registro del Service Worker -->
   <script>
