--- a/index.html
+++ b/index.html
@@ -46,15 +46,6 @@
 
   <script src="js/script.js"></script>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker
-          .register('service-worker.js')
-          .then(reg => console.log('Service Worker registrado:', reg.scope))
-          .catch(err => console.error('Error al registrar SW:', err));
-      });
-    }
-  </script>
+  <script src="js/app.js"> </script>
 </body>
 </html>
